--- a/serverless-koa-api-server/package.json
+++ b/serverless-koa-api-server/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "koa": "^2.11.0",
-    "koa-router": "^8.0.8"
+    "koa-router": "^8.0.8",
+    "serverless-http": "^2.5.0"
   }
 }
