--- a/electron/package.json
+++ b/electron/package.json
@@ -1,14 +1,30 @@
 {
-  "name": "electron",
+  "name": "parrying",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "main.ts",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build": "webpack --mode production"
+
   },
   "author": "falsy",
   "license": "WTFPL",
   "devDependencies": {
-    "electron": "^27.1.3"
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@types/react": "^18.2.41",
+    "@types/react-dom": "^18.2.17",
+    "electron": "^27.1.3",
+    "file-loader": "^6.2.0",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.2",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
