--- a/react-gloabl-state-managements/recoil/package.json
+++ b/react-gloabl-state-managements/recoil/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "recoil": "^0.7.7"
   }
 }
