--- a/react-gloabl-state-managements/zustand/package.json
+++ b/react-gloabl-state-managements/zustand/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zustand": "^5.0.0-rc.2"
   }
 }
