--- a/rsc-koa/package.json
+++ b/rsc-koa/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "babel src --out-dir dist --extensions \".js,.jsx\"",
+    "build:server": "babel src --out-dir dist --extensions \".js,.jsx\"",
+    "build:client": "webpack --config webpack.config.cjs",
+    "build": "npm run build:client && npm run build:server",
     "start": "node dist/server/index.js"
   },
   "author": "",
@@ -13,6 +15,7 @@
   "dependencies": {
     "@koa/router": "^13.1.0",
     "koa": "^2.15.4",
+    "koa-static": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -20,6 +23,9 @@
     "@babel/cli": "^7.26.4",
     "@babel/core": "^7.26.9",
     "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "^7.26.3"
+    "@babel/preset-react": "^7.26.3",
+    "babel-loader": "^9.2.1",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   }
 }
